# sofi2d-python-tools

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
examples/SEAM_elastic/: example_SEAM.json
sofi2dpy/: __init__.py  config.py  model_utils.py  output_utils.py  plot_utils.py
